--- a/gift.html
+++ b/gift.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Gift For You, Love</title>
-    <link rel="stylesheet" href="https://120932193708/styles.css">
+    <link href="./style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <div class="background-video">
